--- a/html/WEB-INF/classes/org/mmbase/jspeditors/editors.properties
+++ b/html/WEB-INF/classes/org/mmbase/jspeditors/editors.properties
@@ -1,4 +1,4 @@
-# version     $Id: editors.properties,v 1.16 2004-06-28 19:41:16 michiel Exp $
+# version     $Id: editors.properties,v 1.17 2005-04-19 20:29:14 michiel Exp $
 # since       MMBase-1.6
 # author      Michiel Meeuwissen
 #
@@ -57,6 +57,7 @@ config.method=login method
 config.session=cloud session variable
 config.language=language (two letter code)
 config.country=country (two letter code)
+config.xmlmode=XML-mode
 
 Node=Node
 oftype=of type
