Contentelementen submenu and Metaeditor
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13246 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -89,6 +89,7 @@ educationMenuComponents=Componenten
 educationMenuRoles=Rollen
 educationMenuCompetence=Competentie
 educationMenuMetadata=Metadata
+educationMenuContentMetadata=Contentelementen
 educationMenuFilemanagement=Filemanagement
 educationMenuTests=Toetsen
 educationMenuEducations=Opleidingen
