Contentelementen submenu and Metaeditor
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13247 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -29,6 +29,7 @@ chatmenuitem=chat
 city=Plaats
 class=Klas
 closeforum=sluit forum voor studenten
+competence=Competentie beheer
 contact=Contactpersoon
 contentmanagement=contentbeheer
 coursemanagement=cursusbeheer
