nieuw leerblok instead of nieuwe leerblok
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13249 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -47,10 +47,10 @@ createNewFlash=Maak een nieuwe flash file aan
 createNewFlashDescription=Nieuwe flash file aanmaken
 createNewHotspotquestions=Maak een hotspot vraag aan
 createNewHotspotquestionsDescription=Nieuwe hotspot vraag aanmaken
-createNewLearnblock=Maak een nieuwe leerblok aan
-createNewLearnblockDescription=Nieuwe leerblok aanmaken
-createNewMcquestions=Maak een nieuwe vraag aan
-createNewMcquestionsDescription=Nieuwe vraag aanmaken
+createNewLearnblock=Maak een nieuw leerblok aan
+createNewLearnblockDescription=Nieuw leerblok aanmaken
+createNewMcquestions=Maak een nieuwe multiple choice vraag aan
+createNewMcquestionsDescription=Nieuwe multiple choice vraag aanmaken
 createNewMetadatastandard=Voeg nieuwe metadata standaard toe
 createNewMetadatastandardDescription=Nieuwe metadata standaard toevoegen
 createNewMetadefinition=Voeg nieuwe metadefinitie toe
