--- a/applications/taglib/build.xml
+++ b/applications/taglib/build.xml
@@ -4,19 +4,83 @@
 >
 
 <project name="taglib" default="dependent.jar" basedir=".">
-  <property name="project.name"   value="taglib" />
+  <property name="project.name"      value="taglib" />
   <property name="project.package"   value="org/mmbase/bridge/jsp/taglib" />
   <property name="project.comment"   value="The MMBase Taglib implementation" />
 
   <property name="source-taglib.xml"    value="org/mmbase/bridge/jsp/taglib/mmbase-taglib.xml" />
   &base;
 
-  <target name="dependent.jar"           depends="taglib.tld,jar" />
+  <property name="taglib2.jar"       value="${project.jar.dir}/mmbase-taglib-2.jar" />
+
+  <target name="dependent.jar"           depends="jar1" />
   <target name="dependent.package"       depends="dependent.jar,taglib.doc,package" />
-  <target name="dependent.install"       depends="dependent.jar,dependent.install.documentation,install" />
+  <target name="dependent.install"       depends="dependent.jar,dependent.install.documentation,install,install.taglib2.tld" />
   <target name="dependent.documentation" depends="taglib.doc,documentation" />
   <target name="dependent.install.documentation" depends="dependent.documentation,install.documentation" />
 
+
+
+  <target name="jar1" description="Create mmbase-taglib.jar" 
+          depends="taglib.tld,jar.check,project.manifest,jar.config"
+          >
+
+    <antcall target="compile" />
+
+    <mkdir dir="${project.metainf.dir}" /><!-- make sure it exists -->
+
+    <mkdir dir="${project.build.dir}/classes/org/mmbase/taglib" /><!-- hate ant -->
+    <echo message="creating jar" />    
+    <jar jarfile="${project.jar}"
+         manifest="${project.build.dir}/manifest.mf" >
+      <metainf dir="${project.metainf.dir}">
+        <include name="**" />
+        <exclude name="**/taglib-2.0.tld" />
+      </metainf>
+      <fileset     dir="${project.build.dir}/classes">
+        <include name="**" />
+      </fileset>
+      <fileset     dir="${project.classes.dir}" includes="${project.classes.includes}" />
+    </jar>
+
+  </target>
+
+  
+  <target name="install.taglib2.tld" depends="taglib.tld">
+    <copy todir="${web.dir}/classes/META-INF">
+      <fileset dir="${project.metainf.dir}">
+        <include name="**/taglib-2.0.tld" />
+      </fileset>
+    </copy>
+  </target>
+
+  <!-- currently unused -->
+  <target name="jar2" description="Create mmbase-taglib-2.jar" 
+          depends="taglib.tld,jar.check,project.manifest,jar.config" 
+
+          >
+
+    <antcall target="compile" />
+
+    <mkdir dir="${project.metainf.dir}" /><!-- make sure his exists -->
+
+    <mkdir dir="${project.build.dir}/classes/org/mmbase/taglib" /><!-- hate ant -->
+    <echo message="creating jar" />    
+
+    <echo message="creating taglib-2 jar" />    
+    <jar jarfile="${taglib2.jar}"
+         manifest="${project.build.dir}/manifest.mf" >
+      <metainf dir="${project.metainf.dir}">
+        <include name="**" />
+        <exclude name="**/taglib.tld" />
+      </metainf>    
+      <!--
+      <fileset     dir="${project.build.dir}/classes" includes="**" />
+      <fileset     dir="${project.classes.dir}" includes="${project.classes.includes}" />
+      -->
+    </jar>
+
+  </target>
 
 
 
