--- a/contributions/didactor2/src/utils/import/noise/noise/config.ini
+++ b/contributions/didactor2/src/utils/import/noise/noise/config.ini
@@ -1,9 +1,17 @@
 [Options]
-username=admin
-password=admin2k
 rmi=rmi://127.0.0.1:1111/didactor
 
-[File_1]
-path=input/ROCZeeland.csv
-type=1
+[File_0]
+path=input\koppelingDidactor.csv
+type=2
+
+# types 0 & 1 also works
+#[File_0]
+#path=input\Leerlingen.TXT
+#path2=input\NIA.TXT
+#type=0
+
+#[File_1]
+#path=input\ROCZeeland.csv
+#type=1
 
