--- a/applications/rmmci/build.xml
+++ b/applications/rmmci/build.xml
@@ -138,6 +138,7 @@ Build-compiler: ${build.compiler}
       <fileset dir="build/rmmcitmp">
         <include name="org/mmbase/bridge/*"/>
         <include name="org/mmbase/storage/search/*"/>
+        <include name="org/mmbase/core/FieldType.class"/>
         <include name="org/mmbase/util/logging/**"/>
         <include name="org/mmbase/security/UserContext.class"/>
         <include name="org/mmbase/security/AuthenticationData.class"/>
