--- a/build.xml
+++ b/build.xml
@@ -79,7 +79,7 @@ several MMBase-checkouts.
   <property name="nowarn" value="off"/>
   <property name="javadoc.cleaning" value="true"/>
   <property name="javadoc.packages" value="org.mmbase.*"/>
-  <property name="mmcidoc.packages" value="org.mmbase.bridge,org.mmbase.storage.search"/>
+  <property name="mmcidoc.packages" value="org.mmbase.bridge,org.mmbase.storage.search,org.mmbase.bridge.util,org.mmbase.util.functions"/>
 
   <!-- documentation related settings -->
   <property name="build.documentation" value="false" />
@@ -297,11 +297,13 @@ builddate=${builddate}
     <copy file="${javamail.jar}"       todir="${release.lib.dir}" />
     -->
     <copy file="${javaactivation.jar}"  todir="${release.lib.dir}" />
-
+   
     <copy file="${taglibs-standard-jstl.jar}"     todir="${release.lib.dir}" />
     <copy file="${taglibs-standard-standard.jar}" todir="${release.lib.dir}" />
 
     <copy file="${mmbase.jar}"         todir="${release.lib.dir}" />
+
+    <copy file="${backport-util-concurrent.jar}"  todir="${release.lib.dir}" />
 
     <!-- copy licenses for included jars -->
     <copy todir="${build.dir}/mmbase/mmbase-webapp/WEB-INF/lib/legal">
@@ -324,6 +326,7 @@ builddate=${builddate}
     <copy file="${log4j.jar}"     tofile="${compile.lib.dir}/log4j.jar" />
     <copy file="${javamail.jar}"  todir="${compile.lib.dir}" />
     <copy file="${javaactivation.jar}"  todir="${compile.lib.dir}" />
+    <copy file="${backport-util-concurrent.jar}"  todir="${compile.lib.dir}" />
   </target>
 
   <target name="lib.compile.zip" depends="lib.compile" description="Packages the download dir." >
@@ -455,6 +458,7 @@ builddate=${builddate}
         <include name="functions/**/*.xml"/>
         <include name="storage/**/*.xml"/>
         <include name="utils/**/*.xml"/>
+        <include name="dtd/**"/>
       </fileset>
     </copy>
     <echo file="${build.dir}/classes/org/mmbase/config/applications/INDEX">
@@ -567,7 +571,7 @@ Basics.xml
     <!-- =================================================================== -->
   <target name="minimalistic.war.config" depends="init.compile">
         <!-- copy the jsp editors to a reasonable place -->
-        <copy todir="${minconfig.build.dir}">
+        <copy todir="${minconfig.build.dir}" preservelastmodified="true">
             <fileset dir="${source-config.dir}"  defaultexcludes="true">
                 <!-- the dirs/files we definitly need -->
                 <include name="databases/**"/>
@@ -910,6 +914,20 @@ Build-compiler: ${build.compiler}
       <param name="sourcefile"   value="${taglibs-standard.loc}" />
       <param name="destfile"     value="${taglibs-standard.dest}" />
       <param name="expandedfile" value="${taglibs-standard-standard.jar}"/>
+    </antcall>
+
+    <echo message="backport util/concurrent" />
+    <antcall target="downloadgz">
+      <param name="sourcefile"   value="${backport-util-concurrent.loc}" />
+      <param name="destfile"     value="${backport-util-concurrent.dest}" />
+      <param name="expandedfile" value="${backport-util-concurrent.jar}"/>
+    </antcall>
+
+    <echo message="commons collections" />
+    <antcall target="downloadgz">
+      <param name="sourcefile"   value="${commons-collections.loc}" />
+      <param name="destfile"     value="${commons-collections.dest}" />
+      <param name="expandedfile" value="${commons-collections.jar}"/>
     </antcall>
 
   </target>
