--- a/speeltuin/keesj/maven/mmbase-webapp/project.properties
+++ b/speeltuin/keesj/maven/mmbase-webapp/project.properties
@@ -1,1 +1,7 @@
+#The artifact type that is produced when multiproject:deploy is run
+maven.multiproject.type=war
+
+# Override the value set in maven-base
+war.bundle=true 
+
 maven.war.webxml=${maven.war.src}/WEB-INF/web-2.4.xml
