created a 'install' target
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13646 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/applications/clustering/build.xml
+++ b/applications/clustering/build.xml
@@ -18,6 +18,9 @@
   <target name="dependent.jar" description="Create mmbase-clustering.jar" 
     depends="jgroups.jar,project.manifest" />
 
+  <target name="dependent.install" description="Install clustering" 
+	  depends="dependent.jar,install" />
+
   <target name="jgroups.jar"
     description="Get JGroups jar">
     
