--- a/applications/build.xml
+++ b/applications/build.xml
@@ -33,7 +33,7 @@ Applications build file
 
   <target name="all16" depends="init,media,bugtracker,email" />
   <target name="all17" depends="init,all16,taglib,cloudcontext,editwizard,dove,xmlimporter,community" />
-  <target name="all18" depends="init,all17,crontab,vwms,scan,packaging,clustering" />
+  <target name="all18" depends="init,all17,rmmci,crontab,vwms,scan,packaging,clustering" />
 
   <target name="all"   depends="init,all18" />
 
