Added license and some improvements
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13724 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/keesj/maven/project.properties
+++ b/speeltuin/keesj/maven/project.properties
@@ -1,3 +1,14 @@
+#   This software is OSI Certified Open Source Software.
+#   OSI Certified is a certification mark of the Open Source Initiative.
+#
+#   The license (Mozilla version 1.0) can be read at the MMBase site.
+#   See http://www.MMBase.org/license
+#
+
+mmbase.checkout.dir=../mmbase-head
+mmbase.checkout.login=true
+mmbase.war=mmbase-webapp
+
 # These settings control how the reactor behaves
 # Exclude the master project, and the maven-base project from the builds
 maven.multiproject.excludes=project.xml,maven-base/project.xml
@@ -6,6 +17,10 @@ maven.multiproject.includes=*/project.xml
 # This is the base directory that the plugin will use when searching for
 # projects to be processed. It is also the 'current directory' for relative paths
 maven.multiproject.basedir=${basedir}
+
+# multichanges
+maven.multichanges.basedir=${maven.multiproject.basedir}
+maven.multichanges.includes=${maven.multiproject.includes}
 
 maven.dashboard.includes=${maven.multiproject.includes}
 # Tells the dashboard plugin not to run its own reactor. 
