--- a/speeltuin/keesj/maven/maven-base/build.properties
+++ b/speeltuin/keesj/maven/maven-base/build.properties
@@ -1,11 +1,17 @@
-maven.repo.remote=http://mmapps.sourceforge.net/distributions,http://www.ibiblio.org/maven,http://maven-plugins.sourceforge.net/maven
+#   This software is OSI Certified Open Source Software.
+#   OSI Certified is a certification mark of the Open Source Initiative.
+#
+#   The license (Mozilla version 1.0) can be read at the MMBase site.
+#   See http://www.MMBase.org/license
+#
+maven.repo.remote=http://mmapps.sourceforge.net/distributions,http://www.ibiblio.org/maven,http://maven-plugins.sourceforge.net/maven,http://www.codeczar.com/maven
 
 # The group to set the artifact to once deployed.
 maven.remote.group=mmbase
 maven.group=mmbase
 
 # The remote username to log in as when deploying.
-maven.username=maven
+maven.username=guest
 
 # Proxy settings
 #maven.proxy.host= The IP or address of your proxy.
@@ -20,3 +26,5 @@ maven.username=maven
 #maven.ssh.executable=c:/putty/plink
 #maven.scp.args=-pw <PASSWORD> -q -batch -1
 #maven.ssh.args=-pw <PASSWORD> -batch -1
+
+maven.test.skip=true
