--- a/speeltuin/keesj/maven/maven-base/project.properties
+++ b/speeltuin/keesj/maven/maven-base/project.properties
@@ -1,3 +1,10 @@
+#   This software is OSI Certified Open Source Software.
+#   OSI Certified is a certification mark of the Open Source Initiative.
+#
+#   The license (Mozilla version 1.0) can be read at the MMBase site.
+#   See http://www.MMBase.org/license
+#
+
 # Specifies the version of the jdk in use. 
 maven.compile.source=1.4
 maven.compile.target=1.4
@@ -45,6 +52,7 @@ maven.jdiff.new.tag=HEAD
 #By default we don't bundle dependency jars into wars
 war.bundle=false
 
+maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/
 # Specifies custom tags to use for the generated Javadocs.
 maven.javadoc.customtags=todo application bad-constant bad-literal code-conventions core deprecated-now deprecation-used dependency duplicate javadoc language license move performance rename requires scope sql vpro
 
