--- a/speeltuin/keesj/maven/mmbase-docs/project.properties
+++ b/speeltuin/keesj/maven/mmbase-docs/project.properties
@@ -1,7 +1,14 @@
+#   This software is OSI Certified Open Source Software.
+#   OSI Certified is a certification mark of the Open Source Initiative.
+#
+#   The license (Mozilla version 1.0) can be read at the MMBase site.
+#   See http://www.MMBase.org/license
+#
+
 # The stylesheet to use instead of the default one
 #maven.sdocbook.html.xsl=${maven.sdocbook.stylesheets.dir}/html/mmbase.xsl
 #maven.sdocbook.fo.xsl=${maven.sdocbook.stylesheets.dir}/fo/mmbase.xsl
-maven.sdocbook.src.dir=doc
+maven.sdocbook.src.dir=${basedir}/doc
 
 maven.sdocbook.use.entityresolver=true
 maven.sdocbook.catalogmanager.properties=${basedir}/CatalogManager.properties
