--- a/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle.properties
+++ b/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle.properties
@@ -43,4 +43,6 @@ SAVE=save
 REACTIONS=Reactions
 REACT=react
 PORTFOLIO=Portfolio
+CHOOSE_A_LETTER_OR_SEARCH=Browse by letter or search
+SEARCH=Search
 
