--- a/speeltuin/keesj/maven/project.properties
+++ b/speeltuin/keesj/maven/project.properties
@@ -5,7 +5,14 @@
 #   See http://www.MMBase.org/license
 #
 
-mmbase.checkout.dir=../mmbase-head
+# mmbase.checkout.tag
+# -------------------
+# Checks out this release from cvs 
+#  Usage: MMBase-1_7 / HEAD 
+
+mmbase.checkout.tag=MMBase-1_7
+
+mmbase.checkout.dir=mmbase/${mmbase.checkout.tag}
 mmbase.checkout.login=true
 mmbase.war=mmbase-webapp
 
