marcel: head/1.7 difference bit more structured
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13787 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/keesj/maven/project.properties
+++ b/speeltuin/keesj/maven/project.properties
@@ -5,13 +5,7 @@
 #   See http://www.MMBase.org/license
 #
 
-# mmbase.checkout.tag
-# -------------------
-# Checks out this release from cvs 
-#  Usage: MMBase-1_7 / HEAD 
-
-mmbase.checkout.tag=MMBase-1_7
-
+mmbase.checkout.tag=HEAD
 mmbase.checkout.dir=mmbase/${mmbase.checkout.tag}
 mmbase.checkout.login=true
 mmbase.war=mmbase-webapp
