--- a/speeltuin/keesj/maven/project.properties
+++ b/speeltuin/keesj/maven/project.properties
@@ -5,8 +5,7 @@
 #   See http://www.MMBase.org/license
 #
 
-# mmbase.checkout.tag=${pom.currentVersion}
-mmbase.checkout.tag=MMBase-1_7
+mmbase.checkout.tag=${pom.currentVersion}
 mmbase.checkout.dir=mmbase/${mmbase.checkout.tag}
 mmbase.checkout.login=true
 mmbase.war=mmbase-webapp
