property mmbase.version can be used by an external project to define which version of mmbase should be used
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13860 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/keesj/maven/maven-base/project.properties
+++ b/speeltuin/keesj/maven/maven-base/project.properties
@@ -5,6 +5,8 @@
 #   See http://www.MMBase.org/license
 #
 
+mmbase.version=HEAD
+
 # Specifies the version of the jdk in use. 
 maven.compile.source=1.4
 maven.compile.target=1.4
