--- a/speeltuin/keesj/maven/project.properties
+++ b/speeltuin/keesj/maven/project.properties
@@ -5,7 +5,7 @@
 #   See http://www.MMBase.org/license
 #
 
-mmbase.checkout.tag=${pom.currentVersion}
+mmbase.checkout.tag=${mmbase.version}
 mmbase.checkout.dir=mmbase/${mmbase.checkout.tag}
 mmbase.war=mmbase-webapp
 
