Generate docbook html files offline
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13862 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/keesj/maven/mmbase-docs/CatalogManager.properties
+++ b/speeltuin/keesj/maven/mmbase-docs/CatalogManager.properties
@@ -17,7 +17,7 @@
 # The semicolon-delimited list of catalog files.
 # Example: catalogs=./xcatalog;/share/doctypes/catalog
 
-catalogs=entities/catalog
+catalogs=entities/catalog;w3c/catalog;entities/oasis/4.1.2/docbook.cat
 
 #######################################################################
 # Relative Catalogs:
@@ -27,7 +27,7 @@ catalogs=entities/catalog
 # CatalogManager.properties file
 # Example: relative-catalogs = [yes|no]
 
-relative-catalogs=yes
+relative-catalogs=no
 
 #######################################################################
 # Verbosity:
@@ -42,7 +42,7 @@ verbosity=1
 # Which identifier is preferred, "public" or "system"?
 # Example: xml.catalog.prefer = [public|system]
 
-prefer=system
+prefer=public
 
 #######################################################################
 # Static-catalog:
