--- a/speeltuin/keesj/maven/mmbase-docs/project.properties
+++ b/speeltuin/keesj/maven/mmbase-docs/project.properties
@@ -6,8 +6,8 @@
 #
 
 # The stylesheet to use instead of the default one
-#maven.sdocbook.html.xsl=${maven.sdocbook.stylesheets.dir}/html/mmbase.xsl
-#maven.sdocbook.fo.xsl=${maven.sdocbook.stylesheets.dir}/fo/mmbase.xsl
+maven.sdocbook.html.xsl=${maven.sdocbook.stylesheets.dir}/html/docbook2xhtml.xslt
+#maven.sdocbook.html.params=
 maven.sdocbook.src.dir=${basedir}/doc
 
 maven.sdocbook.use.entityresolver=true
