added a few properties for convienience (may move them later)
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13870 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/html/WEB-INF/classes/org/mmbase/jspeditors/editors.properties
+++ b/html/WEB-INF/classes/org/mmbase/jspeditors/editors.properties
@@ -1,4 +1,4 @@
-# version     $Id: editors.properties,v 1.17 2005-04-19 20:29:14 michiel Exp $
+# version     $Id: editors.properties,v 1.18 2005-06-06 08:22:50 michiel Exp $
 # since       MMBase-1.6
 # author      Michiel Meeuwissen
 #
@@ -74,3 +74,7 @@ ok=ok
 search=search
 false=false
 true=true
+default=default
+
+richtext.editor=Richtext editor
+richtext.nonode=No node loaded
