--- a/contributions/didactor2/build.properties
+++ b/contributions/didactor2/build.properties
@@ -1,6 +1,6 @@
 build.dir = ${basedir}/build
 includepath = providers/educations/courses
-components = core,address,agenda,chat,competence,education,email,forum,metadata,portfolio,progress,sources,workspace,search,pop,pdf
+components = core,address,agenda,chat,competence,education,email,forum,metadata,portfolio,progress,sources,workspace,search,pop,pdf,drm
 providers = 
 war.name=didactor
 multiple.wars =
