--- a/speeltuin/mihxil/kupu/mmbase/Makefile
+++ b/speeltuin/mihxil/kupu/mmbase/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.6 2005-06-22 23:25:17 michiel Exp $
+# $Id: Makefile,v 1.7 2005-06-29 21:10:33 michiel Exp $
 
 
 KUPU_HOME=..
@@ -17,16 +17,18 @@ LANGS=nl de fr it eo
 all: index.jspx
 
 
-index.jspx: mmbase-kupu-i18n.jar dist-mmbase.kupu 
+index.jspx: mmbase-kupu-i18n.jar *.kupu 
 	$(XSLTPROC) $(XSLTPROC_PARAMS) -o $@  $(XSLJSPX_FILE) dist-mmbase.kupu
 
 $(I18N):
 	@$(MAKE) -C $(KUPU_HOME) kupu-i18n.jar	
 
 .PHONY:
-messages: *.js
+messages: *.js clean
+	rm phony.js
+	grep -r "fmt:message" *.jspx *.kupu | sed 's/.*key="\(.*\)".*/_("\1");/g' | uniq > phony.js
 	mkdir -p i18n
-	xgettext -j --from-code=UTF-8 -L java -k_ -p i18n *.js 
+	xgettext --from-code=UTF-8 -L java -k_ -p i18n *.js 
 	for LOCALE in $(LANGS) ; do \
 	   msgmerge --update --backup=off i18n/$${LOCALE}.po i18n/messages.po; \
 	done
