--- a/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle.properties
+++ b/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle.properties
@@ -47,14 +47,14 @@ REACT=react
 PORTFOLIO=Portfolio
 CHOOSE_A_LETTER_OR_SEARCH=Browse by letter or search
 SEARCH=Search
-PROJECTGROUPS=projectgroepen
-PROJECTGROUPNAMENOTEMTPY=Naam mag niet leeg zijn
-PROJECTNAMENOTEMTPY=Naam mag niet leeg zijn
-DELETEPROJECTGROUPS=Projectgroepen verwijderen
-DELETEPROJECTGROUPYESNO=Deze projectgroep verwijderen?
-CREATEPROJECTGROUP=Projectgroep aanmaken
-RENAMEPROJECTGROUP=Projectgroep hernoemen
-DELETECONTACTSYESNO=Deze personen verwijderen?
-DELETECONTACTS=Personen verwijderen
+PROJECTGROUPS=projectgroups
+PROJECTGROUPNAMENOTEMTPY=Name cannot be empty
+PROJECTNAMENOTEMTPY=Name cannot be empty
+DELETEPROJECTGROUPS=Remove projectgroups
+DELETEPROJECTGROUPYESNO=Remove this projectgroup?
+CREATEPROJECTGROUP=Create projectgroup
+RENAMEPROJECTGROUP=Rename projectgroup
+DELETECONTACTSYESNO=Remove these members?
+DELETECONTACTS=Remove members
 
 
