debug logging is not necessary at all
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15585 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/chat/config/chat/chat.properties
+++ b/contributions/didactor2/src/chat/config/chat/chat.properties
@@ -1,12 +1,12 @@
 #Possible loglevels are silent, error, info, debug
 server.logfile=${chat.server.logfile}
 #server.loglevel=info
-server.loglevel=debug
+server.loglevel=info
 
 #Possible loglevels are silent, error, info, connect, login, join, message, debug
 chatengine.logfile=${chat.engine.logfile}
 #chatengine.loglevel=message
-chatengine.loglevel=debug
+chatengine.loglevel=info
 
 #Enables logging per channel works only with loglevel message or higher. set to true if enabled
 chatengine.logperchannel=false
