Migrated the migration templates
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15633 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/build.xml
+++ b/contributions/didactor2/build.xml
@@ -142,6 +142,7 @@
              <include name="shared/**"/>
              <include name="users/**"/>
              <include name="metadata/**"/>
+             <include name="migrate/**"/>
              <include name="${component}/**"/>
              <include name="classes/**"/>
              <exclude name="**/CVS"/>
