They changed the name of the jar, so lets follow that
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15643 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/aselect/build.xml
+++ b/contributions/aselect/build.xml
@@ -8,7 +8,7 @@
   <property name="project.package"   value="org/mmbase/security/implementation/aselect" />
 
 
-  <property name="aselect.system.jar"   value="org.aselect.system.1.4.jar" />
+  <property name="aselect.system.jar"   value="org.aselect.system.jar" />
   <!-- hack hack, just to get it working for now --> 
   <property name="applications.dir"   location="../../applications" />
   <property name="project.jars.dir"      location="../.." />
