moved richtext specific processors to here
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15719 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/applications/richtext/build.xml
+++ b/applications/richtext/build.xml
@@ -6,5 +6,69 @@
 <project name="MMBase Richtext" default="jar" basedir=".">
   <property name="project.name"   value="richtext" />
   &base;
+  <property name="svnant"         location="svnant.jar" />
+  <property name="svnjavahl"      location="svnjavahl.jar" />
+  <property name="svnclient"      location="svnClientAdapter.jar" />
+  <property name="javasvn"      location="javasvn.jar" />
 
+  <target name="dependent.package" depends="kupu,package">
+  </target>
+
+  <target name="svn-task">
+    <!-- nice nice, but I can't get it working. ant sucks, and the svn task too -->
+    <ant target="download" dir="${source.dir}">
+      <property name="sourcefile" value="http://www.mmbase.org/download/jars/svnant.jar" />
+      <property name="destfile"   value="${svnant}" />
+    </ant>
+    <ant target="download" dir="${source.dir}">
+      <property name="sourcefile" value="http://www.mmbase.org/download/jars/svnjavahl.jar" />
+      <property name="destfile"   value="${svnjavahl}" />
+    </ant>
+    <ant target="download" dir="${source.dir}">
+      <property name="sourcefile" value="http://www.mmbase.org/download/jars/svnClientAdapter.jar" />
+      <property name="destfile"   value="${svnclient}" />
+    </ant>
+    
+    <taskdef name="svn"
+            classname="org.tigris.subversion.svnant.SvnTask">
+      <classpath>
+        <pathelement location="${svnant}"/>
+        <pathelement location="${svnjavahl}"/>
+        <pathelement location="${svnclient}"/>
+        <pathelement location="${javasvn}"/>
+      </classpath>
+    </taskdef>
+
+  </target>
+
+
+  <target name="kupu"> 
+    <!--
+    <svn javahl="false">
+      <checkout url="http://codespeak.net/svn/kupu/trunk/kupu/" />
+    </svn> 
+
+result:kupu:
+      [svn] Using javasvn
+Svn : Checking out a working copy from a repository :
+checkout -r HEAD http://codespeak.net/svn/kupu/trunk/kupu/ 
+HTTP 301 MOVED PERMANENTLY: http://codespeak.net/svn/kupu/trunk/kupu
+
+Beats me: it's impossible.
+
+To hell with it.
+This is a _whole lot_ easier.
+    -->
+    <mkdir dir="mmbase/kupu" />
+    <exec executable="svn" dir="mmbase">
+      <arg line="co  http://codespeak.net/svn/kupu/trunk/kupu" />
+    </exec>
+    <exec executable="make" dir="mmbase/kupu">
+      <arg line="kupu-i18n.jar" />
+    </exec>
+    <exec executable="make" dir="mmbase/kupu/mmbase" />
+    <exec executable="make" dir="mmbase/kupu/mmbase">
+      <arg line="mmbase-kupu-i18n.jar" />
+    </exec>
+  </target>
 </project>
