building richtext with kupu checkout
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15750 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/applications/build.xml
+++ b/applications/build.xml
@@ -177,7 +177,7 @@ Applications build file
   </target>
 
   <target name="richtext" depends="mmbase">
-     <ant dir="richtext"  target="package" inheritAll="false">
+     <ant dir="richtext"  target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
        <property name="build.dir"        value="${build.dir}" />
        <property name="download.dir"        value="${download.dir}" />
