including classauthentication.xml in mmbase.jar too
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15942 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/build.xml
+++ b/build.xml
@@ -476,6 +476,7 @@ builddate=${builddate}
         <include name="storage/**/*.xml"/>
         <include name="modules/mmbaseroot.xml"/>
         <include name="modules/mmadmin.xml"/>
+        <include name="security/classauthentication.xml" />
         <include name="utils/**/*.xml"/>
         <include name="xslt/**/*.xsl"/>
         <include name="xslt/**/*.xslt"/>
